# spacetrade-rs

./: Cargo.toml
cli/: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml
core/src/: cargo.rs  lib.rs  loan.rs  ship.rs  user.rs
