[package]
name = "spacetraders-client"
version = "0.1.0"
authors = ["Christopher Morton <sonro@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
spacetraders-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[features]
fulltest = []

